--- a/index.html
+++ b/index.html
@@ -5,49 +5,49 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
+<body class="page">
   <div class="header">
-    <img src="./eisenhower-matrix.jpg">
-    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img src="./eisenhower-matrix.jpg" class="header-img">
+    <a class="header-more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="main">
     <p id="add-new-task">
-      <label for="new-task">Add Item</label>
+      <label for="new-task" class="new-task-name">Add Item</label>
       <div class="task-row-wrapper">
-        <input id="new-task"class="task" type="text">
-        <button>Add</button>
+        <input id="new-task"class="task task-new" type="text">
+        <button class="btn">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incomplete-tasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
+    <h3 class="title">Todo</h3>
+    <ul id="incomplete-tasks" class="list">
+      <li class="list-item">
+        <input type="checkbox" class="task-checkbox">
+        <label class="task-name">Pay Bills</label>
+        <input type="text" class="task task-hide">
+        <button class="btn edit">Edit</button>
+        <button class="btn delete">
+          <img src="./remove.svg" class="delete-img">
         </button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
-          <img src="./remove.svg">
+      <li class="list-item edit-mode">
+        <input type="checkbox" class="task-checkbox">
+        <label class="task-name">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task task-hide">
+        <button class="btn edit">Save</button>
+        <button class="btn delete">
+          <img src="./remove.svg" class="delete-img">
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
+    <h3 class="title">Completed</h3>
+    <ul id="completed-tasks" class="list">
+      <li class="list-item">
+        <input type="checkbox" class="task-checkbox" checked>
+        <label class="task-name">See the Doctor</label>
+        <input type="text" class="task task-hide">
+        <button class="btn edit">Edit</button>
+        <button class="btn delete">
+          <img src="./remove.svg" class="delete-img">
         </button>
       </li>
     </ul>
