--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body class="page">
-  <div class="header">
+  <header class="header">
     <img src="./eisenhower-matrix.jpg" class="header-img">
     <a class="header-more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="main">
-    <p id="add-new-task">
+  </header>
+  <main class="main">
+    <div id="add-new-task">
       <label for="new-task" class="new-task-name">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task"class="task task-new" type="text">
         <button class="btn">Add</button>
       </div>
-    </p>
+    </div>
     <h3 class="title">Todo</h3>
     <ul id="incomplete-tasks" class="list">
       <li class="list-item">
@@ -51,7 +51,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
