refactor(extended-1.2): add media alternatives

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="page">
   <header class="header">
-    <img src="./eisenhower-matrix.jpg" class="header-img">
+    <img src="./eisenhower-matrix.jpg" class="header-img" alt="the eisenhower matrix">
     <a class="header-more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
@@ -26,7 +26,7 @@
         <input type="text" class="task task-hide">
         <button class="btn edit">Edit</button>
         <button class="btn delete">
-          <img src="./remove.svg" class="delete-img">
+          <img src="./remove.svg" class="delete-img" alt="remove button">
         </button>
       </li>
       <li class="list-item edit-mode">
@@ -35,7 +35,7 @@
         <input type="text" value="Go Shopping" class="task task-hide">
         <button class="btn edit">Save</button>
         <button class="btn delete">
-          <img src="./remove.svg" class="delete-img">
+          <img src="./remove.svg" class="delete-img" alt="remove button">
         </button>
       </li>
     </ul>
@@ -47,7 +47,7 @@
         <input type="text" class="task task-hide">
         <button class="btn edit">Edit</button>
         <button class="btn delete">
-          <img src="./remove.svg" class="delete-img">
+          <img src="./remove.svg" class="delete-img" alt="remove button">
         </button>
       </li>
     </ul>
