refactor(extended-2.1): add bem

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body class="page">
   <header class="header">
-    <img src="./eisenhower-matrix.jpg" class="header-img" alt="the eisenhower matrix">
-    <a class="header-more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img src="./eisenhower-matrix.jpg" class="header__img" alt="the eisenhower matrix">
+    <a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
     <div id="add-new-task">
@@ -20,7 +20,7 @@
     </div>
     <h3 class="title">Todo</h3>
     <ul id="incomplete-tasks" class="list">
-      <li class="list-item">
+      <li class="list__item">
         <input type="checkbox" class="task-checkbox">
         <label class="task-name">Pay Bills</label>
         <input type="text" class="task task-hide">
@@ -29,7 +29,7 @@
           <img src="./remove.svg" class="delete-img" alt="remove button">
         </button>
       </li>
-      <li class="list-item edit-mode">
+      <li class="list__item edit-mode">
         <input type="checkbox" class="task-checkbox">
         <label class="task-name">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task task-hide">
@@ -41,7 +41,7 @@
     </ul>
     <h3 class="title">Completed</h3>
     <ul id="completed-tasks" class="list">
-      <li class="list-item">
+      <li class="list__item">
         <input type="checkbox" class="task-checkbox" checked>
         <label class="task-name">See the Doctor</label>
         <input type="text" class="task task-hide">
